# cstride

./: .clang-format  .gitignore  404.html  CMakeLists.txt  CNAME  README.md  build.sh  contributing.html  example.sr  examples.html  getting-started.html  hashmap.json  index.html  language.md  mkdocs.yml  stdlib.html  stride_lexer.py
.github/workflows/: ci.yml  (+3 more)
assets/: app.B4jIy15q.js  app.CzOkzh4b.js  contributing.md.BXOaRpqx.js  contributing.md.BuO5_NEU.js  contributing.md.CDR0uX5j.lean.js  examples.md.C-5sJWhN.js  examples.md.C-5sJWhN.lean.js  examples.md.D9xHtXTy.js  examples.md.D9xHtXTy.lean.js  examples.md.DXPwo9Pl.js  examples.md.DXPwo9Pl.lean.js  examples.md.Dy3PKmdN.js  examples.md.Dy3PKmdN.lean.js  getting-started.md.BWLWGHyq.js  getting-started.md.BWLWGHyq.lean.js  getting-started.md.BouRmHHO.js  getting-started.md.BouRmHHO.lean.js  getting-started.md.DcMIjtGn.js  getting-started.md.DcMIjtGn.lean.js  index.md.7f6w4GF5.js  index.md.7f6w4GF5.lean.js  index.md.m3ugmg47.js  index.md.m3ugmg47.lean.js  index.md.m735MM7i.js  index.md.tDua47ni.js  index.md.tDua47ni.lean.js  reference_functions.md.B5T8hcEu.js  reference_functions.md.B5T8hcEu.lean.js  reference_functions.md.B7tnD3tR.js  reference_functions.md.B7tnD3tR.lean.js  reference_functions.md.WNW7L7V9.js  reference_functions.md.WNW7L7V9.lean.js  reference_functions.md.tYHu3C8f.js  reference_structs.md.Cf4Nq3h3.js  reference_structs.md.Cf4Nq3h3.lean.js  reference_structs.md.D31gJ_XH.js  reference_structs.md.D31gJ_XH.lean.js  reference_structs.md.DJ96PBug.js  reference_structs.md.DJ96PBug.lean.js  reference_structs.md.DLOOiJCv.js  (+19 more)
contributing/: index.html
docs/: contributing.md  examples.md  getting-started.md  index.md  package-lock.json  package.json  pnpm-lock.yaml  stdlib.md
editor/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/: e_to_the_x.sr  index.html  test.sr
getting-started/: index.html
include/: compilation_options.h  errors.h  files.h  program.h
reference/: functions.html  structs.html  variables.html
scripts/: brew-install-local.sh  build-intellij-plugin.sh  generate-lexer.sh  run-tests.sh  run_tests.sh
search/: search_index.json
src/: files.cpp  main.cpp  program.cpp
stdlib/: index.html
stride-stl/: math.sr  memory.sr
(+122 files in other folders)
